--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,27 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  background-color: rgb(0, 0, 0);
+  font-family: 'Poppins', sans-serif;
+  color: white;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  min-height: 100vh;
+}
+.header-div {
+  text-align: center;
+  margin-top: 25px;
+}
+.container .board {
+  border: 5px solid rgb(239, 200, 255);
+  border-radius: 5%;
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 25px;
+  height: 70vh;
+}
