Change cell divs to buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@ body {
   color: white;
 }
 
+button {
+  background: none;
+  border: none;
+}
 .container {
   /* max-width: 1100px;
   margin: 0 auto;
