--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,26 @@ button {
   font-size: 5rem;
   color: white;
 }
+input {
+  width: 50%;
+  margin: 0 auto;
+  padding: 1rem;
+  background-color: black;
+  font-family: inherit;
+  font-size: 1.5rem;
+  text-align: center;
+
+  border-radius: 10px;
+}
+
+input#player1-name {
+  color: rgb(255, 185, 55);
+  border: 1px solid rgb(255, 185, 55);
+}
+input#player2-name {
+  color: rgb(68, 208, 255);
+  border: 1px solid rgb(68, 208, 255);
+}
 .board .cell:active {
   transform: scale(0.9);
   outline: none;
